--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokémon Generator</title>
+    <!-- Importar tus archivos CSS existentes -->
+    <link rel="stylesheet" href="src/Animaciones/Main.css">
+</head>
+<body>
+    <div class="main-container">
+        <!-- Panel lateral izquierdo -->
+        <div class="sidebar">
+            <div class="player-panel">
+                <h2>🎮 Jugador</h2>
+                <div class="player-stat">
+                    <span>Nivel:</span>
+                    <span id="player-level">1</span>
+                </div>
+                <div class="player-stat">
+                    <span>Experiencia:</span>
+                    <span id="player-exp">0/100</span>
+                </div>
+                <div class="exp-bar">
+                    <div class="exp-fill" id="exp-fill" style="width: 0%"></div>
+                </div>
+                <div class="player-stat">
+                    <span>Pokémon capturados:</span>
+                    <span id="captured-count">0</span>
+                </div>
+            </div>
+
+            <div class="missions-panel">
+                <h3>🎯 Misiones</h3>
+                <div class="mission-card" id="mission-1">
+                    <h4>Primer Pokémon</h4>
+                    <p>Captura tu primer Pokémon</p>
+                    <div class="mission-progress">
+                        <div class="mission-progress-bar" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="mission-card" id="mission-2">
+                    <h4>Coleccionista</h4>
+                    <p>Captura 5 Pokémon diferentes</p>
+                    <div class="mission-progress">
+                        <div class="mission-progress-bar" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="mission-card" id="mission-3">
+                    <h4>Maestro Pokémon</h4>
+                    <p>Alcanza el nivel 5</p>
+                    <div class="mission-progress">
+                        <div class="mission-progress-bar" style="width: 0%"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Área principal de contenido -->
+        <div class="content-area">
+            <!-- Header -->
+            <div class="pokemon-container">
+                <h1>🔥 Pokémon Generator</h1>
+                <p>¡Descubre y captura increíbles Pokémon!</p>
+                
+                <!-- Botón de generar -->
+                <button class="generate-btn" onclick="generatePokemon()">
+                    ⚡ Generar Pokémon Aleatorio
+                </button>
+                <div class="pokeball" onclick="generatePokemon()"></div>
+            </div>
+
+            <!-- Grid de Pokémon -->
+            <div class="pokemon-section">
+                <div class="pokemon-list" id="pokemon-list">
+                    <!-- Las tarjetas de Pokémon se generarán aquí -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tu JavaScript aquí -->
+    <script src="tu-archivo-javascript.js"></script>
+</body>
 </html>
